syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.pix";
option java_outer_classname = "DesafioPix";
option objc_class_prefix = "HLW";

package br.com.pix;

service ChavePIXService {
  rpc salvarChave (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

enum TipoChave {
  INVALID_KEY_TYPE  = 0;
  CPF = 1;
  PHONE = 2;
  EMAIL = 3;
  RANDOM  = 4;
  CNPJ =  5; //n√£o foi solicitado, mas consta no Swagger


}

enum TipoConta {
  INVALID_ACCOUNT_TYPE = 0;
  CONTA_POUPANCA = 1;
  CONTA_CORRENTE = 2;
}

message RegistraChavePixRequest{
  string clientId = 1;
  TipoChave tipoDeChave = 2;
  string chave = 3;
  TipoConta tipoDeConta = 4;
}

message RegistraChavePixResponse{
  string pixId = 1;
  string chave = 2;
}

